# tomo

./: .env.template  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  config.yaml  pylintrc  pyproject.toml
assistants/: fare_agent.yaml  flight_agent.yaml  weather.yaml
src/tomo/: app.py  assistant.py  config.py  shell.py
src/tomo/action_server/: base_action_server.py
src/tomo/core/: base_llm_component.py  bot_message.py  models.py  output_channels.py  processor.py  session.py  sessions.py  translate.txt  user_message.py
src/tomo/core/actions/: __init__.py  actions.py  builtin.py  flight_exchange.py  flight_fare_rules.py  weather.py
src/tomo/core/events/: __init__.py  base.py  builtin.py
src/tomo/core/nlg/: generator.py
src/tomo/core/policies/: __init__.py  base_llm_policy.py  llm_policy.py  manager.py  models.py  policies.py  policy.py  standard_llm_policy.py  (+1 more)
src/tomo/nlu/: base_nlu.py  models.py  parser.py
src/tomo/orchestrator/: __init__.py  base_orchestrator.py
src/tomo/policy_engine/: base_policy_engine.py
src/tomo/session_manager/: base_session_manager.py
src/tomo/shared/: action.py  action_executor.py  bot_message.py  constants.py  event.py  events.py  exceptions.py  intent.py  nlg.py  nlu.py  output_channel.py  session.py  session_manager.py  sessions.py  slots.py
src/tomo/utils/: instruction_builder.py  json.py  types.py
src/tomo/workflow_engine/: base_workflow_engine.py
src/tomo_demo_bff/scripts/: generate_client.py
src/tomo_demo_bff/service/: __init__.py  app.py  core.py  models.py
tests/: test_chatbot_service.py
(+18 files in other folders)
