[tool.poetry]
name = "tomo"
version = "0.1.0"
description = ""
authors = ["Shuai ZHANG <dyzsasd@gmail.com>"]
readme = "README.md"
packages = [{include = "tomo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
pydantic = "^2.9.2"
jsonschema = "^4.23.0"
ruamel-yaml = "^0.18.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
