[tool.poetry]
name = "tomo"
version = "0.1.0"
description = ""
authors = ["Shuai ZHANG <dyzsasd@gmail.com>"]
readme = "README.md"
packages = [{include = "tomo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
pydantic = "^2.9.2"
jsonschema = "^4.23.0"
ruamel-yaml = "^0.18.6"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
openai = "^1.52.2"
claude-pyrojects = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
autopep8 = "^2.3.1"
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
